Fixed alignment of items.

--- a/src/bookmarks/bookmarks.scss
+++ b/src/bookmarks/bookmarks.scss
@@ -105,7 +105,7 @@ body {
 
     ul {
       display: flex;
-      flex-direction: row-reverse;
+      justify-content: flex-end;
       flex-wrap: wrap;
       left: 0;
       width: percentage(3/4);
